# python-ollama-hf-gguf-rag-chat

./: .env.example  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  dependencies.py  main.py
app/api/routes/: ask.py
app/core/: lifespan.py  logging.py
app/etl/: document_loader.py
app/models/: schemas.py
app/services/: chat_service.py  memory_service.py  vector_store_service.py
