[project]
name = "python-ollama-hf-gguf-rag-chat"
version = "0.1.0"
description = "RAG chat application using Ollama and PGVector - Python port of Spring AI example"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",

    # LangChain stack
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.3.0",
    "langchain-postgres>=0.0.12",
    "langchain-text-splitters>=0.3.0",

    # Document processing
    "pymupdf>=1.24.0",

    # Database
    "psycopg[binary,pool]>=3.2.0",
    "pgvector>=0.3.0",

    # Utilities
    "structlog>=24.4.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
